# hobocopy

./: CBackupState.cpp  CBackupState.h  CComException.cpp  CCopyAction.cpp  CCopyAction.h  CCopyFilter.cpp  CCopyFilter.h  CDeleteAction.cpp  CDeleteAction.h  CDirectoryAction.cpp  CDirectoryAction.h  CFilespecCopyFilter.cpp  CHoboCopyException.cpp  CHoboCopyException.h  CIncludeAllCopyFilter.cpp  CIncludeAllCopyFilter.h  CMakeLists.txt  CModifiedSinceCopyFilter.cpp  CModifiedSinceCopyFilter.h  COptions.cpp  CParseOptionsException.cpp  CWriter.cpp  CWriterComponent.cpp  CWriterComponent.h  Console.cpp  Console.h  HoboCopy.cpp  OutputWriter.cpp  README.md  Utilities.cpp  license.txt  msi.xml.in  stdafx.cpp
.github/workflows/: cd.yml  ci.yml
cmake/: Buildtag.cmake
install/: CMakeLists.txt  msi.xml.in
install/chocolatey/: hobocopy.nuspec.in
install/chocolatey/tools/: chocolateyInstall.ps1  chocolateyInstall.ps1.in
src/: CBackupState.cpp  CBackupState.h  CComException.cpp  CComException.h  CCopyAction.cpp  CCopyAction.h  CCopyFilter.cpp  CCopyFilter.h  CDeleteAction.cpp  CDeleteAction.h  CDirectoryAction.cpp  CFilespecCopyFilter.cpp  CFilespecCopyFilter.h  CHoboCopyException.cpp  CIncludeAllCopyFilter.cpp  CMakeLists.txt  CModifiedSinceCopyFilter.cpp  CModifiedSinceCopyFilter.h  COptions.cpp  COptions.h  CParseOptionsException.cpp  CParseOptionsException.h  CWriter.cpp  CWriter.h  CWriterComponent.cpp  Console.cpp  Console.h  HoboCopy.cpp  HoboCopy.rc.in  OutputWriter.cpp  OutputWriter.h  Utilities.cpp  Utilities.h  stdafx.cpp  stdafx.h
